--- a/shop-admin-ui/src/main/resources/templates/roles.html
+++ b/shop-admin-ui/src/main/resources/templates/roles.html
@@ -29,7 +29,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="role : ${rolePage}">
+                    <tr th:each="role : ${roles}">
                         <th scope="row" th:text="${role.id}">1</th>
                         <td th:text="${role.name}">Наименование роли</td>
                         <td>
