--- a/shop-admin-ui/src/main/resources/templates/brand.html
+++ b/shop-admin-ui/src/main/resources/templates/brand.html
@@ -13,12 +13,11 @@
     <div th:replace="~{fragmentsAdmin :: menu}"></div>
 
     <div class="content p-4">
-        <h2 class="mb-4"> Добавление нового бренда </h2>
-
+        <h2 class="mb-4">Добавление нового бренда</h2>
         <div class="card mb-4">
             <div class="card-body">
                 <form action="#" th:action="@{/admin/brand/add}" th:object="${brand}" method="post">
-                    <input type="hidden" class="form-control" th:field="*{id}">
+                    <input type="hidden" th:field="*{id}">
                     <div class="form-group">
                         <label>Наименование бренда</label>
                         <input type="text" class="form-control" th:field="*{name}" placeholder="Введите наименование бренда">
