--- a/shop-admin-ui/src/main/resources/templates/product.html
+++ b/shop-admin-ui/src/main/resources/templates/product.html
@@ -18,7 +18,7 @@
         <div class="card mb-4">
             <div class="card-body">
                 <form action="#" th:action="@{/admin/product/add}" th:object="${product}" method="post">
-                    <input type="hidden" class="form-control" th:field="*{id}">
+                    <input type="hidden" th:field="*{id}">
                     <div class="form-group">
                         <label>Наименование товара</label>
                         <input type="text" class="form-control" th:field="*{name}" placeholder="Введите наименование товара">
