--- a/shop-admin-ui/src/main/resources/templates/users.html
+++ b/shop-admin-ui/src/main/resources/templates/users.html
@@ -13,8 +13,7 @@
     <div th:replace="~{fragmentsAdmin :: menu}"></div>
 
     <div class="content p-4">
-        <h2 class="mb-4"> Пользователи </h2>
-
+        <h2 class="mb-4">Пользователи</h2>
         <div class="card mb-4">
             <div class="card-body">
                 <div class="card mb-4">
@@ -32,7 +31,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="user : ${usersPage}">
+                    <tr th:each="user : ${users}">
                         <th scope="row" th:text="${user.id}">1</th>
                         <td th:text="${user.name}">User name</td>
                         <td th:text="${user.roles}">User roles</td>
