--- a/shop-admin-ui/src/main/resources/templates/product.html
+++ b/shop-admin-ui/src/main/resources/templates/product.html
@@ -17,7 +17,7 @@
 
         <div class="card mb-4">
             <div class="card-body">
-                <form action="#" th:action="@{/admin/product/add}" th:object="${product}" method="post">
+                <form action="#" th:action="@{/admin/product/add}" th:object="${product}" method="post" enctype="multipart/form-data">
                     <input type="hidden" th:field="*{id}">
                     <div class="form-group">
                         <label>Наименование товара</label>
@@ -35,21 +35,34 @@
                         <label>Брен</label>
                         <select class="form-control" id="brand" name="brand" th:field="*{brand}">
                             <option value="0">Выберите брен</option>
-                            <option th:each="brandItem : ${brands}" th:value="${brandItem.id}" th:text="${brandItem.name}"></option>
+                            <option th:each="brand : ${brands}" th:value="${brand.id}" th:text="${brand.name}"></option>
                         </select>
                     </div>
-                    <div>
+                    <div class="form-group">
                         <label>Категории продуктов</label>
-                        <div class="checkbox" th:each="category : ${allCategories}">
-
+                        <div class="checkbox" th:each="category : ${categories}">
                             <label> <input th:value="${category.id}" name="categories" th:field="*{categories}" type="checkbox"/>
                                 <span th:text="${category.name}"> Название категории </span>
                             </label>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="newPictures">Изображения продукта</label>
+                        <input th:field="*{newPictures}" type="file" class="form-control" id="newPictures"
+                               placeholder="Upload new product picture" multiple>
+                    </div>
                     <a class="btn btn-primary" th:href="@{/admin/products}">Назад</a>
                     <button type="submit" class="btn btn-primary">Добавить</button>
                 </form>
+
+                <div class="container-fluid mb-4">
+                    <div class="card-columns" style="column-count: 5">
+                        <div class="card" th:each="picture : ${product.pictures}">
+                            <div class="card-header">Изображение</div>
+                            <img class="card-img-bottom" th:src="@{/admin/picture/{pictureId}(pictureId=${picture.id})}" width="40%"/>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
