--- a/shop-admin-ui/src/main/resources/templates/brand.html
+++ b/shop-admin-ui/src/main/resources/templates/brand.html
@@ -16,7 +16,7 @@
         <h2 class="mb-4">Добавление нового бренда</h2>
         <div class="card mb-4">
             <div class="card-body">
-                <form action="#" th:action="@{/admin/brand/add}" th:object="${brand}" method="post" enctype="multipart/form-data">
+                <form action="#" th:action="@{/admin/brand/add}" th:object="${brandRepr}" method="post" enctype="multipart/form-data">
                     <input type="hidden" th:field="*{id}">
                     <div class="form-group">
                         <label>Наименование бренда</label>
@@ -33,11 +33,11 @@
                     <button type="submit" class="btn btn-primary">Добавить</button>
                 </form>
 
-                <div class="container-fluid mb-4" th:if="${brand.picture != null}">
-                    <div class="card-columns" style="column-count: 1">
+                <div class="container-fluid mb-4" th:if="${brandRepr.picture != null}">
+                    <div class="card-columns" style="column-count: 10">
                         <div class="card">
                             <div class="card-header">Изображение</div>
-                            <img class="card-img-bottom" th:src="@{/admin/picture/{pictureId}(pictureId=${brand.picture.id})}" width="40%"/>
+                            <img class="card-img-bottom" th:src="@{/admin/picture/{pictureId}(pictureId=${brandRepr.picture.id})}" width="10%"/>
                         </div>
                     </div>
                 </div>
