--- a/shop-admin-ui/src/main/resources/templates/product.html
+++ b/shop-admin-ui/src/main/resources/templates/product.html
@@ -17,7 +17,7 @@
 
         <div class="card mb-4">
             <div class="card-body">
-                <form action="#" th:action="@{/admin/product/add}" th:object="${product}" method="post" enctype="multipart/form-data">
+                <form action="#" th:action="@{/admin/product/add}" th:object="${productRepr}" method="post" enctype="multipart/form-data">
                     <input type="hidden" th:field="*{id}">
                     <div class="form-group">
                         <label>Наименование товара</label>
@@ -42,7 +42,7 @@
                         <label>Категории продуктов</label>
                         <div class="checkbox" th:each="category : ${categories}">
                             <label> <input th:value="${category.id}" name="categories" th:field="*{categories}" type="checkbox"/>
-                                <span th:text="${category.name}"> Название категории </span>
+                                <span th:text="${category.name}">Название категории</span>
                             </label>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
 
                 <div class="container-fluid mb-4">
                     <div class="card-columns" style="column-count: 5">
-                        <div class="card" th:each="picture : ${product.pictures}">
+                        <div class="card" th:each="picture : ${productRepr.pictures}">
                             <div class="card-header">Изображение</div>
                             <img class="card-img-bottom" th:src="@{/admin/picture/{pictureId}(pictureId=${picture.id})}" width="40%"/>
                         </div>
