--- a/shop-admin-ui/src/main/resources/templates/user.html
+++ b/shop-admin-ui/src/main/resources/templates/user.html
@@ -16,7 +16,7 @@
         <h2 class="mb-4">Добавление нового пользователя</h2>
         <div class="card mb-4">
             <div class="card-body">
-                <form th:action="@{/admin/user/update}" method="post" th:object="${user}">
+                <form th:action="@{/admin/user/update}" method="post" th:object="${userRepr}">
                     <input type="hidden" th:field="*{id}">
                     <div class="form-group">
                         <label>Логин</label>
@@ -28,7 +28,7 @@
                         <label>Пароль</label>
                         <input type="password" class="form-control" th:field="*{password}" placeholder="Введите пароль">
                         <small id="passwordError" class="form-text text-error"
-                               th:if="${#fields.hasErrors('name')}" th:errors="*{password}">Validation error</small>
+                               th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Validation error</small>
                     </div>
                     <div class="form-group">
                         <label>Email</label>
