Добавление страницы с товарами магазина. Добавление страницы конкретног товара.

--- a/shop-ui/src/main/resources/templates/products.html
+++ b/shop-ui/src/main/resources/templates/products.html
@@ -28,14 +28,9 @@
 
             <!--  Catagories  -->
             <div class="catagories-menu">
-                <ul>
-                    <li class="active"><a href="#">Chairs</a></li>
-                    <li><a href="#">Beds</a></li>
-                    <li><a href="#">Accesories</a></li>
-                    <li><a href="#">Furniture</a></li>
-                    <li><a href="#">Home Deco</a></li>
-                    <li><a href="#">Dressings</a></li>
-                    <li><a href="#">Tables</a></li>
+                <ul th:each="category : ${categories}">
+                    <!--                    <li class="active"><a href="#">Chairs</a></li>-->
+                    <li><a href="#" th:text="${category.name}">Категория</a></li>
                 </ul>
             </div>
         </div>
@@ -44,32 +39,12 @@
         <div class="widget brands mb-50">
             <!-- Widget Title -->
             <h6 class="widget-title mb-30">Бренды</h6>
-
             <div class="widget-desc">
                 <!-- Single Form Check -->
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="amado">
-                    <label class="form-check-label" for="amado">Amado</label>
-                </div>
-                <!-- Single Form Check -->
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="ikea">
-                    <label class="form-check-label" for="ikea">Ikea</label>
-                </div>
-                <!-- Single Form Check -->
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="furniture">
-                    <label class="form-check-label" for="furniture">Furniture Inc</label>
-                </div>
-                <!-- Single Form Check -->
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="factory">
-                    <label class="form-check-label" for="factory">The factory</label>
-                </div>
-                <!-- Single Form Check -->
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="artdeco">
-                    <label class="form-check-label" for="artdeco">Artdeco</label>
+                <div class="form-check" th:each="brand : ${brands}">
+                    <input class="form-check-input" type="checkbox" name="categories"
+                           th:field="*{brands}" th:value="${brand.name}" th:id="${brand.name}">
+                    <label class="form-check-label" th:for="${brand.name}" th:text="${brand.name}">бренд</label>
                 </div>
             </div>
         </div>
@@ -78,17 +53,16 @@
         <div class="widget price mb-50">
             <!-- Widget Title -->
             <h6 class="widget-title mb-30">Цена</h6>
-
             <div class="widget-desc">
                 <div class="slider-range">
-                    <div data-min="10" data-max="1000" data-unit="$"
+                    <div data-min="10" data-max="1000000" data-unit="₽"
                          class="slider-range-price ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all"
                          data-value-min="10" data-value-max="1000000" data-label-result="">
                         <div class="ui-slider-range ui-widget-header ui-corner-all"></div>
                         <span class="ui-slider-handle ui-state-default ui-corner-all" tabindex="0"></span>
                         <span class="ui-slider-handle ui-state-default ui-corner-all" tabindex="0"></span>
                     </div>
-                    <div class="range-price">₽10 - ₽1000000</div>
+                    <div class="range-price">₽ 10 - ₽ 1000000</div>
                 </div>
             </div>
         </div>
@@ -96,7 +70,6 @@
 
     <div class="amado_product_area section-padding-100">
         <div class="container-fluid">
-
             <div class="row">
                 <div class="col-12">
                     <div class="product-topbar d-xl-flex align-items-end justify-content-between">
@@ -135,27 +108,38 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
-
                 <!-- Single Product Area -->
-                <div class="col-12 col-sm-6 col-md-12 col-xl-6">
+                <div class="col-12 col-sm-6 col-md-12 col-xl-6" th:each="product : ${products}">
                     <div class="single-product-wrapper">
                         <!-- Product Image -->
-                        <div class="product-img">
-                            <img src="img/product-img/product1.jpg" alt="">
-                            <!-- Hover Thumb -->
-                            <img class="hover-img" src="img/product-img/product2.jpg" alt="">
-                        </div>
-
+                        <a th:href="@{/product/{id}(id=${product.id})}">
+                            <div class="product-img" th:if="${product.pictures.size() == 0}">
+                                <div>
+                                    <img th:src="@{/img/core-img/notPicture.png}" alt="Изображение">
+                                </div>
+                            </div>
+                            <!-- Product Image -->
+                            <div class="product-img" th:if="${product.pictures.size() >= 1}">
+                                <div th:each="picture,iterStat : ${product.pictures}">
+                                    <img th:if="${iterStat.first}"
+                                         th:src="@{/admin/picture/{pictureId}(pictureId=${picture.id})}"
+                                         alt="Изображение">
+                                    <!-- Hover Thumb -->
+                                    <img class="hover-img" th:if="${iterStat.index == 1}"
+                                         th:src="@{/admin/picture/{pictureId}(pictureId=${picture.id})}"
+                                         alt="Изображение">
+                                </div>
+                            </div>
+                        </a>
                         <!-- Product Description -->
                         <div class="product-description d-flex align-items-center justify-content-between">
                             <!-- Product Meta Data -->
                             <div class="product-meta-data">
-                                <div class="line"></div>
-                                <p class="product-price">$180</p>
-                                <a href="product-details.html">
-                                    <h6>Modern Chair</h6>
+                                <a th:href="@{/product/{id}(id=${product.id})}">
+                                    <div class="line"></div>
+                                    <p class="product-price" th:text="₽ + ' ' + ${product.cost}">Цена</p>
+                                    <h6 th:text="${product.name}">Наименование товара</h6>
                                 </a>
                             </div>
                             <!-- Ratings & Cart -->
@@ -168,205 +152,15 @@
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </div>
                                 <div class="cart">
-                                    <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img
-                                            src="img/core-img/cart.png" alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Product Area -->
-                <div class="col-12 col-sm-6 col-md-12 col-xl-6">
-                    <div class="single-product-wrapper">
-                        <!-- Product Image -->
-                        <div class="product-img">
-                            <img src="img/product-img/product2.jpg" alt="">
-                            <!-- Hover Thumb -->
-                            <img class="hover-img" src="img/product-img/product3.jpg" alt="">
-                        </div>
-
-                        <!-- Product Description -->
-                        <div class="product-description d-flex align-items-center justify-content-between">
-                            <!-- Product Meta Data -->
-                            <div class="product-meta-data">
-                                <div class="line"></div>
-                                <p class="product-price">$180</p>
-                                <a href="product-details.html">
-                                    <h6>Modern Chair</h6>
-                                </a>
-                            </div>
-                            <!-- Ratings & Cart -->
-                            <div class="ratings-cart text-right">
-                                <div class="ratings">
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </div>
-                                <div class="cart">
-                                    <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img
-                                            src="img/core-img/cart.png" alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Product Area -->
-                <div class="col-12 col-sm-6 col-md-12 col-xl-6">
-                    <div class="single-product-wrapper">
-                        <!-- Product Image -->
-                        <div class="product-img">
-                            <img src="img/product-img/product3.jpg" alt="">
-                            <!-- Hover Thumb -->
-                            <img class="hover-img" src="img/product-img/product4.jpg" alt="">
-                        </div>
-
-                        <!-- Product Description -->
-                        <div class="product-description d-flex align-items-center justify-content-between">
-                            <!-- Product Meta Data -->
-                            <div class="product-meta-data">
-                                <div class="line"></div>
-                                <p class="product-price">$180</p>
-                                <a href="product-details.html">
-                                    <h6>Modern Chair</h6>
-                                </a>
-                            </div>
-                            <!-- Ratings & Cart -->
-                            <div class="ratings-cart text-right">
-                                <div class="ratings">
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </div>
-                                <div class="cart">
-                                    <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img
-                                            src="img/core-img/cart.png" alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Product Area -->
-                <div class="col-12 col-sm-6 col-md-12 col-xl-6">
-                    <div class="single-product-wrapper">
-                        <!-- Product Image -->
-                        <div class="product-img">
-                            <img src="img/product-img/product4.jpg" alt="">
-                            <!-- Hover Thumb -->
-                            <img class="hover-img" src="img/product-img/product5.jpg" alt="">
-                        </div>
-
-                        <!-- Product Description -->
-                        <div class="product-description d-flex align-items-center justify-content-between">
-                            <!-- Product Meta Data -->
-                            <div class="product-meta-data">
-                                <div class="line"></div>
-                                <p class="product-price">$180</p>
-                                <a href="product-details.html">
-                                    <h6>Modern Chair</h6>
-                                </a>
-                            </div>
-                            <!-- Ratings & Cart -->
-                            <div class="ratings-cart text-right">
-                                <div class="ratings">
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </div>
-                                <div class="cart">
-                                    <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img
-                                            src="img/core-img/cart.png" alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Product Area -->
-                <div class="col-12 col-sm-6 col-md-12 col-xl-6">
-                    <div class="single-product-wrapper">
-                        <!-- Product Image -->
-                        <div class="product-img">
-                            <img src="img/product-img/product5.jpg" alt="">
-                            <!-- Hover Thumb -->
-                            <img class="hover-img" src="img/product-img/product6.jpg" alt="">
-                        </div>
-
-                        <!-- Product Description -->
-                        <div class="product-description d-flex align-items-center justify-content-between">
-                            <!-- Product Meta Data -->
-                            <div class="product-meta-data">
-                                <div class="line"></div>
-                                <p class="product-price">$180</p>
-                                <a href="product-details.html">
-                                    <h6>Modern Chair</h6>
-                                </a>
-                            </div>
-                            <!-- Ratings & Cart -->
-                            <div class="ratings-cart text-right">
-                                <div class="ratings">
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </div>
-                                <div class="cart">
-                                    <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img
-                                            src="img/core-img/cart.png" alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Product Area -->
-                <div class="col-12 col-sm-6 col-md-12 col-xl-6">
-                    <div class="single-product-wrapper">
-                        <!-- Product Image -->
-                        <div class="product-img">
-                            <img src="img/product-img/product6.jpg" alt="">
-                            <!-- Hover Thumb -->
-                            <img class="hover-img" src="img/product-img/product1.jpg" alt="">
-                        </div>
-
-                        <!-- Product Description -->
-                        <div class="product-description d-flex align-items-center justify-content-between">
-                            <!-- Product Meta Data -->
-                            <div class="product-meta-data">
-                                <div class="line"></div>
-                                <p class="product-price">$180</p>
-                                <a href="product-details.html">
-                                    <h6>Modern Chair</h6>
-                                </a>
-                            </div>
-                            <!-- Ratings & Cart -->
-                            <div class="ratings-cart text-right">
-                                <div class="ratings">
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </div>
-                                <div class="cart">
-                                    <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img
-                                            src="img/core-img/cart.png" alt=""></a>
+                                    <a href="#" data-toggle="tooltip" data-placement="left" title="Добавит в корзину">
+                                        <img th:src="@{/img/core-img/cart.png}" alt="Купить">
+                                    </a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-12">
                     <!-- Pagination -->
@@ -382,14 +176,13 @@
             </div>
         </div>
     </div>
-</div>
 
-<!-- ##### Footer Area Start ##### -->
-<footer th:replace="~{fragments/footer :: footer}"></footer>
-<!-- ##### Footer Area End ##### -->
+    <!-- ##### Footer Area Start ##### -->
+    <footer th:replace="~{fragments/footer :: footer}"></footer>
+    <!-- ##### Footer Area End ##### -->
 
-<!-- ##### jQuery (Necessary for All JavaScript Plugins) ##### -->
-<script th:replace="~{fragments/scripts :: script}"></script>
+    <!-- ##### jQuery (Necessary for All JavaScript Plugins) ##### -->
+    <script th:replace="~{fragments/scripts :: script}"></script>
 
 </body>
 
