--- a/shop-ui/src/main/resources/templates/fragments/menu.html
+++ b/shop-ui/src/main/resources/templates/fragments/menu.html
@@ -42,9 +42,9 @@
 <!--            <a href="#" class="btn amado-btn active">New this week</a>-->
 <!--        </div>-->
         <div class="cart-fav-search mb-100">
-            <a href="cart.html" class="cart-nav"><img src="img/core-img/cart.png" alt="">Корзина <span>(0)</span></a>
-            <a href="#" class="fav-nav"><img src="img/core-img/favorites.png" alt="">Избранное</a>
-            <a href="#" class="search-nav"><img src="img/core-img/search.png" alt="">Поиск</a>
+            <a href="#" class="cart-nav"><img th:src="@{/img/core-img/cart.png}" alt="Корзина">Корзина <span>(0)</span></a>
+            <a href="#" class="fav-nav"><img th:src="@{/img/core-img/favorites.png}" alt="Избранное">Избранное</a>
+            <a href="#" class="search-nav"><img th:src="@{/img/core-img/search.png}" alt="Поиск">Поиск</a>
         </div>
         <div class="social-info d-flex justify-content-between">
             <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
