--- a/shop-ui/src/main/resources/templates/fragments/footer.html
+++ b/shop-ui/src/main/resources/templates/fragments/footer.html
@@ -38,7 +38,7 @@
                                         <a class="nav-link" th:href="@{/products}">Товары</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Корзина</a>
+                                        <a class="nav-link" th:href="@{/cart}">Корзина</a>
                                     </li>
                                 </ul>
                             </div>
