--- a/shop-ui/src/main/resources/templates/fragments/menu.html
+++ b/shop-ui/src/main/resources/templates/fragments/menu.html
@@ -32,7 +32,6 @@
             <ul>
                 <li th:classappend="${activePage == 'Home'} ? active"><a th:href="@{/index}">Spring Shop</a></li>
                 <li th:classappend="${activePage == 'Products'} ? active"><a th:href="@{/products}">Товары</a></li>
-                <li th:classappend="${activePage == 'Cart'} ? active"><a href="#">Корзина</a></li>
                 <li th:classappend="${activePage == 'Login'} ? active"><a href="#">Личный кабинет</a></li>
             </ul>
         </nav>
@@ -42,7 +41,9 @@
 <!--            <a href="#" class="btn amado-btn active">New this week</a>-->
 <!--        </div>-->
         <div class="cart-fav-search mb-100">
-            <a href="#" class="cart-nav"><img th:src="@{/img/core-img/cart.png}" alt="Корзина">Корзина <span>(0)</span></a>
+<!--            <a href="#" class="cart-nav"><img th:src="@{/img/core-img/cart.png}" alt="Корзина">Корзина <span>(0)</span></a>-->
+            <a th:href="@{/cart}" th:classappend="${activePage == 'Cart'} ? 'active cart-nav' : 'cart-nav'">
+                <img th:src="@{/img/core-img/cart.png}" alt="Корзина">Корзина <span>(0)</span></a>
             <a href="#" class="fav-nav"><img th:src="@{/img/core-img/favorites.png}" alt="Избранное">Избранное</a>
             <a href="#" class="search-nav"><img th:src="@{/img/core-img/search.png}" alt="Поиск">Поиск</a>
         </div>
