--- a/shop-ui/src/main/resources/templates/cart.html
+++ b/shop-ui/src/main/resources/templates/cart.html
@@ -16,7 +16,7 @@
     <div th:replace="~{fragments/menu :: mobile_header}"></div>
 
     <!-- Header Area Start -->
-    <header th:replace="~{fragments/menu :: header}"></header>
+    <header th:replace="~{fragments/menu :: header (${lineItems})}"></header>
     <!-- Header Area End -->
 
     <div class="cart-table-area section-padding-100">
@@ -44,7 +44,10 @@
                                         <input type="hidden" name="productId" th:value="${lineItem.productId}"/>
                                         <button type="submit" class="btn">x</button>
                                     </form>
-                                    <img th:src="@{/admin/picture/{pictureId}(pictureId=${lineItem.productRepr.pictureIds.get(0)})}" alt="Изображение товара"/>
+                                    <img th:if="${lineItem.productRepr.pictureIds.size() == 0}"
+                                         th:src="@{/img/core-img/notPicture.png}" alt="Изображение">
+                                    <img th:if="${lineItem.productRepr.pictureIds.size() > 0}"
+                                         th:src="@{/admin/picture/{pictureId}(pictureId=${lineItem.productRepr.pictureIds.get(0)})}" alt="Изображение товара"/>
                                     <h5><a href="#" th:text="${lineItem.productRepr.name}">Наименование товара</a></h5>
                                 </td>
                                 <td class="price">
@@ -96,6 +99,10 @@
     </div>
 </div>
 <!-- ##### Main Content Wrapper End ##### -->
+
+<!-- ##### Chat Start ##### -->
+<div th:include="fragments/chat :: chat"></div>
+<!-- ##### Chat End ##### -->
 
 <!-- ##### Footer Area Start ##### -->
 <footer th:replace="~{fragments/footer :: footer}"></footer>
