--- a/shop-ui/src/main/resources/templates/index.html
+++ b/shop-ui/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
         <div th:replace="~{fragments/menu :: mobile_header}"></div>
 
         <!-- Header Area Start -->
-        <header th:replace="~{fragments/menu :: header}"></header>
+        <header th:replace="~{fragments/menu :: header (${lineItems})}"></header>
         <!-- Header Area End -->
 
         <!-- Product Catagories Area Start -->
@@ -24,6 +24,10 @@
         <!-- Product Catagories Area End -->
     </div>
     <!-- ##### Main Content Wrapper End ##### -->
+
+    <!-- ##### Chat Start ##### -->
+    <div th:include="fragments/chat :: chat"></div>
+    <!-- ##### Chat End ##### -->
 
     <!-- ##### Footer Area Start ##### -->
     <footer th:replace="~{fragments/footer :: footer}"></footer>
